gobmkida/g2/hash_init
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/hash_init/src/engine/hash.c:562:1: error: use of undeclared identifier 'qword_A12C98'
qword_A12C98[v0] = v5 | ( v6 << 32); 
^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/hash_init/src/obj/1/hash.o] Error 1
